@@ -1,5 +1,9 @@
 2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>
 
+	* src/Frame_Resizer_Base.cc: hmmz, i forgot to remove one unnecessary check.
+
+2005-01-25 Bart Hakvoort  <hakvoort@cvs.gnome.org>
+
 	* include/Frame_Resizer_Base.h,
 	  include/Frame_Resizer_Extended.h,
 	  src/Frame_Resizer_Base.cc,
